--- a/templates/bmc/css/pages/homepage.scss
+++ b/templates/bmc/css/pages/homepage.scss
@@ -7,23 +7,30 @@
 
 //Banner
 .intro-container {
+  @include flexbox;
   @include grid(col / span 4, row);
   @include grid-template(repeat(4, 1fr), null);
   @include bcg-img('/app/site/media/images/pexels-photo-355988.jpg');
   @include bcg($black, $white);
   height: 25rem;
+  @include grid-support {
+    height: auto;
+  }
 }
 .intro {
   @include grid(1 / span 4, null);
   width: 100%;
   align-self: center;
   padding: 2.5em;
+  .tagline {
+    color: $white;
+  }
   @include respond-at(901px) {
     @include grid(1 / span 2, null);
     width: 40%;
   }
-  .tagline {
-    color: $white;
+  @include grid-support {
+    width: auto;
   }
 }
 
@@ -32,9 +39,6 @@
   @include grid(col / span 4, row 2);
   @include grid-template(1fr, repeat(4, auto));
   @include bcg($med-blue, $white);
-  @include respond-at(901px) {
-    @include grid-template(repeat(4, 1fr), repeat(2, minmax(23rem, auto)));
-  }
   h2 {
     color: $white;
   }
@@ -44,6 +48,9 @@
 }
 h3 {
   font-family: 'montserratultra_light', 'Montserrat', Helvetica Neue, Helvetica, sans-serif;
+}
+@include respond-at(901px) {
+  @include grid-template(repeat(4, 1fr), repeat(2, minmax(23rem, auto)));
 }
 .resources {
   @include flexbox(wrap);
@@ -59,35 +66,32 @@ h3 {
     width: 100%;
     padding: 2.5em;
     align-self: center;
-    @include respond-at(901px) {
-      @include grid(3 / span 2, null);
-      width: 50%;
-    }
+    order: -1;
     .link {
       @include buttons($white);
       padding-top: 2em;
     }
+    @include respond-at(901px) {
+      @include grid(3 / span 2, null);
+      order: 0;
+      width: 50%;
+    }
+    @include grid-support {
+      width: auto;
+    }
   }
   .module-left {
-    @include flexbox;
+    @include flexbox(wrap);
     @include grid-template(repeat(auto-fit, minmax(15rem, 1fr)), null, 5px);
     grid-auto-rows: 15rem;
     width: 100%;
-    width: 50%;
     padding: 2.5em;
-    @include respond-at(901px){
-      @include grid(1 / span 2, null);
-      @include grid-template(1fr, repeat(3, 15rem), 5px);
-    }
-    @include respond-at(1201px) {
-      @include grid-template(repeat(3, 1fr), 1fr, 5px);
-      grid-auto-rows: auto;
-      width: 50%;
-    }
     .resource-img {
       @extend %showcase-img;
     }
     .resource {
+      flex: 1 1 15rem;
+      height: 15rem;
       position: relative;
       margin: 5px;
       .resource-tag {
@@ -101,11 +105,26 @@ h3 {
           @include showcase-header(1em, 1, 2);
         }
       }
+      @include grid-support {
+        margin: 0;
+      }
+    }
+    @include respond-at(901px){
+      @include grid(1 / span 2, null);
+      @include grid-template(1fr, repeat(3, 15rem), 5px);
+      width: 50%;
+    }
+    @include respond-at(1201px) {
+      @include grid-template(repeat(3, 1fr), 1fr, 5px);
+      grid-auto-rows: auto;
+    }
+    @include grid-support {
+      width: auto;
     }
   }
 }
 .software {
-  @include flexbox;
+  @include flexbox(wrap);
   @include grid(1fr, 2);
   @include grid-template(1fr, repeat(2, auto));
   flex: 1;
@@ -114,23 +133,31 @@ h3 {
     @include grid-template(repeat(2, 1fr), null);
   }
   .left {
-    width: 50%;
+    width: 100%;
     padding: 2.5em;
     .link {
       @include buttons($white);
       padding-top: 2em;
+    }
+    @include respond-at(901px) {
+      width: 50%;
+    }
+    @include grid-support {
+      width: auto;
     }
   }
   .software-logos {
     @include flexbox(wrap);
     @include grid-template(repeat(auto-fit, minmax(100px, 1fr)), null, 10px);
     grid-auto-rows: 125px;
-    width: 50%;
+    width: 100%;
     padding: 2.5em;
     justify-items: center;
     align-self: center;
     text-align: center;
     .logo-wrap {
+      width: 9rem;
+      height: 8rem;
       img {
         height: 65%;
         object-fit: scale-down;
@@ -148,6 +175,12 @@ h3 {
         }
       }
     }
+    @include respond-at(901px) {
+      width: 50%;
+    }
+    @include grid-support {
+      width: auto;
+    }
   }
 }
 .sub-title {
@@ -160,21 +193,21 @@ h3 {
   @include grid-template(1fr, repeat(2, auto));
 }
 .network {
-  @include flexbox;
+  @include flexbox(wrap);
   @include grid(null, 1);
   @include grid-template(1fr, repeat(2, auto));
   @include respond-at(901px) {
     @include grid-template(repeat(2, 1fr), 23rem);
   }
   .network-logos {
-    padding: 2.5em;
     @include grid-template(repeat(auto-fit, minmax(75px, 1fr)), null, 5px);
     justify-items: center;
+    padding: 2.5em;
     .logo {
       align-self: center;
       background-color: transparent !important;
       border: none !important;
-      width: 75px !important;
+      width: 4.6rem !important;
     }
   }
   .left {
@@ -184,13 +217,22 @@ h3 {
       @include grid(1 / span 1, null);
       width: 50%;
     }
+    @include grid-support {
+      width: auto;
+    }
   }
   .right {
     @include grid(1fr, 1);
+    order: -1;
+    width: 100%;
     @extend .left;
     @include respond-at(901px) {
       @include grid(2 / span 1, null);
+      order: 0;
       width: 50%;
+    }
+    @include grid-support {
+      width: auto;
     }
   }
   .link {
@@ -199,7 +241,7 @@ h3 {
   }
 }
 .community {
-  @include flexbox;
+  @include flexbox(wrap);
   @include grid-template(1fr, repeat(2, auto));
   @include respond-at(901px) {
     @include grid-template(repeat(2, 1fr), auto);
@@ -209,6 +251,8 @@ h3 {
     padding: 2.5em;
     @include respond-at(620px) {
       @include grid-template(repeat(2, 1fr), repeat(2, auto));
+    }
+    @include respond-at(901px) {
       width: 50%;
     }
     .title {
@@ -237,11 +281,17 @@ h3 {
         top: 50%;
       }
     }
+    @include grid-support {
+      width: auto;
+    }
   }
   .right {
     width: 100%;
-    @include respond-at(1001px) {
+    @include respond-at(901px) {
       width: 50%;
+    }
+    @include grid-support {
+      width: auto;
     }
   }
   .module-right {
@@ -252,18 +302,36 @@ h3 {
     }
     .horizontal {
       @include grid(span 4, null);
-      width: 24rem;
+      flex: 1 1 30rem;
       height: 15rem;
+      @include respond-at(901px) {
+        @include grid(span 4, null);
+        flex: 1 1 24rem;
+        height: 12rem;
+      }
       @include respond-at(1001px) {
         @include grid(span 2, null);
+      }
+      @include grid-support {
+        width: auto;
+        height: auto;
       }
     }
     .regular {
       @include grid(span 2, null);
-      width: 12rem;
+      flex: 1 1 15rem;
       height: 15rem;
+      @include respond-at(901px) {
+        @include grid(span 2, null);
+        flex: 1 1 12rem;
+        height: 12rem;
+      }
       @include respond-at(1001px) {
         @include grid(span 1, null);
+      }
+      @include grid-support {
+        width: auto;
+        height: auto;
       }
     }
     .billboard-image {
@@ -332,6 +400,9 @@ h3 {
         }
       }
     }
+    @include grid-support {
+      width: auto;
+    }
   }
 }
 
@@ -359,15 +430,18 @@ h3 {
     @include grid(1 / span 2, null);
     position: relative;
     width: 100%;
-    // width: 21%;
     border: 1px solid $green;
     border-radius: 6px;
     padding: 1.5em 1em 2.5em 1em;
+    margin: 5px 0;
     @include respond-at(901px) {
       @include grid(span 2, null);
+      width: 47%;
+      margin: 5px;
     }
     @include respond-at(1201px) {
       @include grid(span 1, null);
+      width: 21%;
     }
     h4 {
       height: 4.5rem;
@@ -379,188 +453,9 @@ h3 {
     .link {
       @include buttons($green);
     }
-  }
-}
-
-// @media only screen and (min-width: 320px) and (max-width: 900px) {
-//   .intro-container {
-//     .intro {
-//       width: 100%;
-//       grid-column: 1 / span 4;
-//     }
-//   }
-//   .resources {
-//     flex-wrap: wrap;
-//     grid-template-rows: 20rem auto;
-//     .module-left {
-//       width: 100%;
-//       flex-wrap: wrap;
-//       grid-column: 1 / span 4;
-//       grid-row: 2;
-//       grid-template-rows: repeat(3, 17rem);
-//       .regular {
-//         grid-column: span 3;
-//       }
-//     }
-//     .oer {
-//       width: 100%;
-//       order: -1;
-//       grid-column: 1 / span 4;
-//       grid-row: 1;
-//     }
-//   }
-//   .software {
-//     flex-wrap: wrap;
-//     grid-template-rows: repeat(2, 1fr);
-//     .left {
-//       width: 100%;
-//       grid-column: 1 / span 4;
-//       grid-row: 1;
-//     }
-//     .software-logos {
-//       width: 100%;
-//       grid-column: 1 / span 4;
-//       grid-row: 2;
-//     }
-//   }
-//   .network {
-//     flex-wrap: wrap;
-//     grid-template-rows: repeat(2, 1fr);
-//     .left {
-//       width: 100%;
-//       grid-column: 1 / span 4;
-//       grid-row: 2;
-//     }
-//     .right {
-//       width: 100%;
-//       order: -1;
-//       grid-column: 1 / span 4;
-//       grid-row: 1;
-//     }
-//   }
-//   .community {
-//     flex-wrap: wrap;
-//     grid-template-rows: repeat(2, 1fr);
-//     .left {
-//       width: 100%;
-//       grid-column: 1 / span 4;
-//       grid-row: 1;
-//     }
-//     .right {
-//       width: 100%;
-//       grid-column: 1 / span 4;
-//       grid-row: 2;
-//     }
-//     .module-right {
-//       grid-template-rows: repeat(4, 150px);
-//       .big {
-//         grid-column: span 4;
-//         grid-row: span 2;
-//       }
-//       .regular {
-//         grid-column: span 2;
-//       }
-//       .horizontal {
-//         grid-column: span 4;
-//       }
-//     }
-//   }
-//   .three {
-//     flex-wrap: wrap;
-//     grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
-//     .service {
-//       width: 100%;
-//       grid-column: 1 / span 4;
-//     }
-//   }
-// }
-// @media only screen and (min-width: 901px) and (max-width: 1200px) {
-//   .resources {
-//     .module-left {
-//       grid-template-rows: repeat(3, 15rem);
-//       .regular {
-//         grid-column: span 3;
-//       }
-//     }
-//   }
-//   .community {
-//     .module-right {
-//       grid-template-rows: repeat(4, 200px);
-//       .big {
-//         grid-column: span 4;
-//         grid-row: span 2;
-//       }
-//       .regular {
-//         grid-column: span 2;
-//       }
-//       .horizontal {
-//         grid-column: span 4;
-//       }
-//     }
-//   }
-//   .three {
-//     .service {
-//       grid-column: span 2;
-//     }
-//   }
-// }
-//Reset widths if css grid is supported
-@supports (display:grid) {
-  .intro-container {
-    height: auto;
-    .intro {
+    @include grid-support {
       width: auto;
-    }
-  }
-  .resources {
-    .oer {
-      width: auto;
-    }
-    .module-left {
-      width: auto;
-      .resource {
-        margin: 0;
-      }
-    }
-  }
-  .software {
-    .left {
-      width: auto;
-    }
-    .software-logos {
-      width: auto;
-    }
-  }
-  .network {
-    .left {
-      width: auto;
-    }
-    .right {
-      width: auto;
-    }
-  }
-  .community {
-    .left {
-      width: auto;
-    }
-    .right {
-      width: auto;
-    }
-    .module-right {
-      width: auto;
-      .horizontal {
-        width: auto;
-        height: auto;
-      }
-      .regular {
-        width: auto;
-        height: auto;
-      }
-    }
-  }
-  .three {
-    .service {
-      width: auto;
+      margin: 0;
     }
   }
 }
