--- a/core/components/com_wiki/site/assets/css/wiki.css
+++ b/core/components/com_wiki/site/assets/css/wiki.css
@@ -71,10 +71,6 @@
 		float: right;
 		margin: 0 0 0 1.5em;
 	}
-	.sub-menu li a span:before {
-		font-family: "Fontcons";
-		margin-right: 0.4em;
-	}
 	.sub-menu li.page-delete {
 		float: right;
 		background: transparent;
@@ -102,36 +98,8 @@
 		height: auto;
 		display: inline;
 	}
-	.sub-menu li.page-text a span:before {
-		content: "\f036";
-	}
-	.sub-menu li.page-edit a span:before {
-		content: "\270E";
-	}
-	.sub-menu li.page-comments a span:before {
-		content: "\f086";
-	}
-	.sub-menu li.page-history a span:before {
-		content: "\f017";
-	}
-	.sub-menu li.page-delete a span:before {
-		content: "\f057";
-	}
-	.sub-menu li.page-main a span:before {
-		content: "\f071";
-	}
-	.sub-menu li.page-search a span:before {
-		content: "\f002";
-	}
 	.sub-menu li.page-pdf {
 		background: transparent;
-	}
-	.sub-menu li.page-pdf a span:before {
-		content: "\f019";
-	}
-	.icon-index:before,
-	.sub-menu li.page-index a span:before {
-		content: "\f03a";
 	}
 	.sub-menu li.page-delete.active a,
 	.sub-menu li.page-delete.active a:hover,
@@ -458,7 +426,7 @@
 	}
 	.qq-upload-spinner {
 		display: inline-block;
-		background: url("../img/loading.gif");
+		background: url("/core/components/com_wiki/site/assets/img/loading.gif");
 		width: 15px;
 		height: 15px;
 		vertical-align: text-bottom;
@@ -843,7 +811,7 @@
 /* Wiki pages */
 	.wikipage {
 		margin: 0;
-		padding: 0 1.2em;
+		padding: 0; /* 1.2em;*/
 	}
 	.wikipage h1,
 	.wikipage h1,
@@ -1059,10 +1027,7 @@
 		border: none;
 		color: #999;
 		margin-left: 1em;
-	}
-	a.markup:before {
-		content: "\f036";
-		font-family: "Fontcons";
+		line-height: 1;
 		font-size: 1.2em;
 	}
 	a.markup:hover {
@@ -1106,10 +1071,4 @@
 	}
 	.approved {
 		color: green;
-	}
-	.icon-suggested:before {
-		content: "\2757";
-	}
-	.icon-approved:before {
-		content: "\2714";
 	}
